--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,33 @@
 @import "tailwindcss";
+
+
+@keyframes sidePopRight {
+  0% {
+    transform: translateX(40px) scale(0.95);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0) scale(1);
+    opacity: 1;
+  }
+}
+
+.side-pop-right {
+  animation: 1s sidePopRight  ease-in-out forwards;
+}
+
+
+@keyframes sidePopLeft {
+  0% {
+    transform: translateX(0) scale(1);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(40px) scale(0.95);
+    opacity: 1;
+  }
+}
+
+.side-pop-left {
+  animation: 1s sidePopLeft ease-in-out forwards;
+}
